--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "scripts": {
     "client": "webpack-dev-server --hot --inline",
-    "dev": "node server & webpack --watch",
+    "dev": "nodemon server & webpack --watch",
     "server": "node server",
     "start": "webpack && node server",
     "test": "jest --watchAll"
@@ -34,6 +34,10 @@
   "dependencies": {
     "express": "^4.16.4",
     "knex": "^0.20.2",
+    "nodemon": "^2.0.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "sqlite3": "^4.1.0",
     "superagent": "^5.0.2"
   },
