--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.20.2",
+    "nock": "^11.7.0",
     "nodemon": "^2.0.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
